--- a/kube-system/rabbitmq.yaml
+++ b/kube-system/rabbitmq.yaml
@@ -868,8 +868,7 @@ ingress:
   ##
   ## If certManager is set to true, annotation kubernetes.io/tls-acme: "true" will automatically be set
   ##
-  annotations:
-    traefik.ingress.kubernetes.io/router.tls: "true"
+  annotations: {}
 
   ## @param ingress.tls Enable TLS configuration for the hostname defined at `ingress.hostname` parameter
   ## TLS certificates will be retrieved from a TLS secret with name: {{- printf "%s-tls" .Values.ingress.hostname }}
