add missing topologykey

--- a/kube-system/jenkins.yaml
+++ b/kube-system/jenkins.yaml
@@ -73,6 +73,7 @@ agent:
                           operator: In
                           values:
                           - builder
+                  topologyKey: topology.kubernetes.io/zone
               nodeAffinity:
                 requiredDuringSchedulingIgnoredDuringExecution:
                   nodeSelectorTerms:
